# red-rover

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.yaml  loader.py  mkdocs.yml  mypy.ini  pyproject.toml  rover.kdl  rover.py  rover.sh  update_gh_pages.sh
assembly/: bottom-plate.SLDPRT  camera.SLDPRT  front-plate.SLDPRT  front-plate.STL  handle-bracket.SLDPRT  handle-mount.SLDPRT  handle.SLDPRT  layout.SLDASM  mid-plate.SLDPRT  mid-plate.STL  nuc-plate.SLDPRT  nuc.SLDASM  radar.SLDPRT  top-plate.SLDPRT
collect/: AGENTS.md  Makefile  README.md  app.py  cli.py  collect.py  common.py  config.yaml  controller.py  dart.yaml  demo_command_list.py  imu_api.py  lidar.py  mypy.ini  pyproject.toml  radar.py  radarhd.yaml  requirements.txt  rover.kdl  test.py
collect/config/: README.md  dart.yaml  grt-b.yaml  grt-i.yaml  grt-o.yaml  radarhd-b.yaml  radarhd-i.yaml  radarhd-o.yaml  summary.py
collect/docs/: components.md  conf.py  index.rst  scripts.rst  setup.md  usage.md
collect/docs/api/: api.rst  imu.rst  radar.rst  rover.rst
collect/docs/guides/: collect.rst  components.md  guides.rst  modes.md  setup.md  tips.rst
collect/parts/: top-plate.STL
collect/parts/src/: front-plate.SLDPRT
collect/radar_api/: __init__.py  awr_api.py  awr_boilerplate.py  config.py  dca_api.py  dca_types.py  dca_writer.py  system.py
collect/rover/: __init__.py  camera.py  common.py  imu.py  imu_api.py  lidar.py  radar.py
collect/rover/radar_api/: __init__.py  awr_api.py  awr_boilerplate.py  awr_types.py  config.py  dca_api.py  dca_types.py  system.py
collect/roverc/: __init__.py  camera.py  common.py  imu.py  imu_api.py  lidar.py  radar.py
collect/roverc/radar_api/: awr_api.py  awr_types.py  config.py  dca_api.py  dca_types.py  system.py
collect/scripts/: __init__.py  control.py  exit.py  get_config.py  info.py  run.py  start.py  stop.py
collect/scriptsc/: __init__.py  control.py  exit.py  get_config.py  run.py  start.py  stop.py
collect/sensors/: imu.py  lidar.py  radar.py
collect/server/: app.py
collect/server/templates/: index.html
collect/templates/: index.html
docs/: Makefile  build.sh  components.md  conf.py  development.md  docker.md  format.md  index.html  index.md  requirements.txt  setup.md
format/: AGENTS.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  test.ipynb
format/docs/: sensors.md  spec.md
format/roverd/: dataset.py
format/roverd/channels/: __init__.py  lzma.py  raw.py  video.py
format/roverd/sensors/: __init__.py  base.py
format/src/roverd/: __init__.py  dataset.py  timestamps.py  trace.py  types.py
format/src/roverd/_cli/: __init__.py  blobify.py  checksum.py  extract.py  info.py  list.py  rosbag.py  validate.py
format/src/roverd/channels/: __init__.py  abstract.py  base.py  blob.py  lzma.py  raw.py  utils.py  video.py
format/src/roverd/cli/: __init__.py  cli.py  info.py  validate.py
format/src/roverd/sensors/: __init__.py  _timestamps.py  base.py  camera.py  generic.py  imu.py  lidar.py  pose.py  radar.py
format/src/roverd/transforms/: __init__.py  ouster.py  ros.py  xwr.py
format/tests/: test_channels.py  test_trace.py
iq1m/: LICENSE  calibrate.py  camera.json  camera_ns.json  upload.md  upload.txt
processing/: AGENTS.md  Makefile  README.md  export.py  mypy.ini  pcd.ipynb  process.py  pyproject.toml  requirements.txt  rosconvert.py  rover.kdl  rover.sh
processing/calibration/: calibrate.ipynb  camera.json  camera_ns.json
processing/catkin_ws/: kill_cartographer.py
processing/catkin_ws/src/slam/: package.xml  red-rover.urdf
processing/catkin_ws/src/slam/configuration_files/: assets_writer_cart_3d.lua  cart_3d.lua
processing/catkin_ws/src/slam/launch/: assets_writer_cart_3d.launch  headless_cart_3d.launch  offline_cart_3d.launch
processing/docs/: conf.py  dataset.rst  docker.md  format.md  graphics.rst  index.rst  radar.rst  rover.rst  scripts.rst  setup.md  slam.rst  usage.md  visualization.rst
processing/docs/scripts/: convert.rst  create.rst  export.rst  get.rst  render.rst  run.rst
processing/graphics/: __init__.py  colors.py  font.py  resize.py
processing/models/segformer-b5-finetuned-ade-640-640/: classes.yaml  preprocessor_config.json
processing/models/segformer-b5-finetuned-cityscapes-1024-1024/: classes.yaml  preprocessor_config.json
processing/notebooks/: calibrate.ipynb  pcd.ipynb
processing/rover/: __init__.py  channel.py  dataset.py  metrics.py  radar.py  slam.py  timestamps.py  voxelgrid.py
processing/rover/graphics/: __init__.py  colors.py  font.py  resize.py
processing/roverp/: __init__.py  metrics.py  radar.py  slam.py  voxelgrid.py
processing/roverp/graphics/: __init__.py  colors.py  font.py  pointcloud.py  render.py  resize.py  sync.py  writer.py
processing/scripts/: __init__.py  _make_rst.py  _summary_table.py  align.py  as_nerfstudio.py  as_rover1.py  cfar.py  cfar_map.py  cfar_pointcloud.py  clip.py  compare.py  decompress.py  export.py  fft.py  info.py  lidarmap.py  nearest.py  radarpose.py  report.py  rosbag.py  sensorpose.py  simulate.py  slice.py  test.ipynb  video.py
processing/scriptsp/: __init__.py  align.py  as_nerfstudio.py  as_rover1.py  cfar.py  cfar2.py  cfar_map.py  cfar_pointcloud.py  clip.py  compare.py  compare2.py  decompress.py  export.py  fft.py  fft2.py  info.py  lidarmap.py  nearest.py  report.py  rosbag.py  segment.py  sensorpose.py  simulate.py  slice.py  video.py
processing/src/roverp/: __init__.py
processing/src/roverp/_cli/: __init__.py  anonymize.py  report.py  segment.py  sensorpose.py
processing/src/roverp/graphics/: __init__.py  colors.py  font.py  pointcloud.py  render.py  resize.py  sync.py  writer.py
processing/src/roverp/readers/: __init__.py  pose.py  voxelgrid.py
rover2/: Makefile  README.md  camera.py  common.py  dataset_info.py  demo_command_list.py  demo_command_list.txt  imu.py  lidar.py  radar.py  requirements.txt  stats.py  test.py  xsens_api.py
stats/: README.md  pyproject.toml
stats/src/tss/: __init__.py  _cli.py  ablations.py  api.py  stats.py  utils.py
(+51 files in other folders)
