[project]
name = "red-rover"
version = "0.2.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]

requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[tool.uv.sources]
roverd = { path = "./format" }
roverp = { path = "./processing" }
tss = { path = "./stats" }

[project.optional-dependencies]
roverd = [ "roverd[video,ouster,ros]" ]

roverp = [ "roverp[graphics,pcd,ply,semseg]" ]

stats = [ "tss" ]

interactive = [
    "matplotlib",
    "ipykernel",
    "ipywidgets"
]

docs = [
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.3",
    "mkdocstrings-python == 1.16.6",
    "mkdocstrings == 0.29.*",
    "ruff == 0.12.*"
]
