[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roverd"]

[project]
name = "roverd"
version = "0.1.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Rover Data Format API."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy >= 1.19",
    "jaxtyping >= 0.3.2",
    "pyyaml",
    "types-PyYaml",
    "beartype",
    "optree >= 0.16.0",
    "abstract_dataloader == 0.3.*",
    "tyro>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/WiseLabCMU/red-rover"
Documentation = "https://wiselabcmu.github.io/red-rover/"
Issues = "https://github.com/WiseLabCMU/red-rover/issues"

[project.optional-dependencies]
video = ["opencv-python-headless"]
ouster = ["ouster-sdk >= 0.12.0"]
xwr = ["xwr >= 0.1.0"]
ros = ["rosbags==0.9.19", "scipy", "tqdm"]

[project.scripts]
roverd = "roverd:_cli.cli_main"

[tool.uv.sources]
xwr = { git = "ssh://git@github.com/WiseLabCMU/xwr.git" }
