[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roverp"
version = "0.2.1"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Rover Data Processing Utilities."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy>=1.19",
    "jaxtyping>=0.3.2",
    "beartype",
    "einops",
    "jax[cuda12]",
    "scipy",
    "tqdm",
    "pyyaml",
    "pandas",
    "tqdm-stubs",
    "pandas-stubs",
    "types-PyYaml",
    "types-Pillow",
    "tyro>=0.9.0",
    "roverd[video,ouster] >= 0.1.0"
]

[project.optional-dependencies]
graphics = [
    "matplotlib",
    "pillow",
    "imageio[ffmpeg]"
]
pcd = [ "pypcd4" ]
ply = [ "plyfile" ]
semseg = [
    "torch",
    "transformers"
]

[tool.uv.sources]
roverd = { path = "../format" }

[project.urls]
Homepage = "https://github.com/WiseLabCMU/red-rover"
Documentation = "https://wiselabcmu.github.io/red-rover/"
Issues = "https://github.com/WiseLabCMU/red-rover/issues"

[project.scripts]
roverp = "roverp:_cli.cli_main"
