[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roverp"
version = "0.2.2"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Rover Data Processing Utilities."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy>=1.19",
    "jaxtyping>=0.3.2",
    "beartype",
    "einops",
    "jax[cuda12]",
    "scipy",
    "tqdm",
    "pyyaml",
    "pandas",
    "tqdm-stubs",
    "pandas-stubs",
    "types-PyYaml",
    "types-Pillow",
    "tyro>=0.9.0",
    "roverd[video,ouster] >= 0.1.0"
]

[project.optional-dependencies]
graphics = [
    "matplotlib",
    "pillow",
    "imageio[ffmpeg]"
]
pcd = [ "pypcd4" ]
ply = [ "plyfile" ]
semseg = [
    "torch",
    "transformers"
]

[tool.uv.sources]
roverd = { path = "../format" }

[project.urls]
Homepage = "https://github.com/RadarML/red-rover"
Documentation = "https://radarml.github.io/red-rover/"
Issues = "https://github.com/RadarML/red-rover/issues"

[project.scripts]
roverp = "roverp:_cli.cli_main"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "W", "N", "I", "D", "NPY"
]
ignore = [
    "D102",  # Inheriting docstrings is allowed
    "D107",  # Initializer goes in the class docstring
    "D401",  # "Imperative mood" NLP doesn't always make sense
    "D413",  # No blank lines after section is preferred by mkdocstrings
    "N806",  # We do math, so capitalization should be allowed

    # Must pick one...
    "D213",  # Pick 'multi-line-summary-first-line'.
    "D203",  # Pick `no-blank-line-before-class`.
]

[tool.coverage.report]
exclude_also = [
    '^\s*\.\.\.\s*$',
    'def __repr__',
    'if __name__ == .__main__.:',
    'class .*\bProtocol\):',
    'raise NotImplementedError',
]
