[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tss"
version = "0.1.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Statistical analysis of time series performance metrics."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy >= 1.19",
    "jaxtyping >= 0.3.2",
    "beartype >= 0.20.0",
    "optree >= 0.16.0",
    "tyro >= 0.9.0",
    "scipy >= 1.10.0",
    "scipy-stubs",
    "pandas >= 1.0.0",
    "pandas-stubs"
]

[project.urls]
Homepage = "https://github.com/WiseLabCMU/red-rover"
Documentation = "https://wiselabcmu.github.io/red-rover/"
Issues = "https://github.com/WiseLabCMU/red-rover/issues"

[project.scripts]
tss = "tss:_cli.cli_main"
